# Assignment5

./: .gitignore  README.md
sps_genai/: Theory Section #2 Assignment 5 Migue Morales mam2670.docx  main.py  pyproject.toml
sps_genai/app/: bigram_model.py  finetune_llm.py  main.py  model_llm.py  model_rnn.py  rl_posttrain_llm.py
sps_genai/helper_lib/: creator.py  data_loader.py  evaluator.py  model.py  trainer.py  utils.py
